# knowledge_graph

./: .dockerignore  .gitignore  LICENSE  Makefile.toml  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile_Tensorboard
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  src.const.html  src.data.html  src.data.rst  src.features.html  src.html  src.models.KGModel.html  src.models.KGModel.rst  src.models.datasets.html  src.models.datasets.rst  src.models.html  src.models.utilLoss.html  src.models.utilLoss.rst  src.models.utilMetrics.html  src.models.utilModules.html  src.rst  src.test.html  src.test.rst  src.utils.html  src.utils.math.html  src.visualization.html
docs/.doctrees/: environment.pickle  index.doctree  src.const.doctree  src.data.doctree  src.doctree  src.features.doctree  src.models.KGModel.doctree  src.models.datasets.doctree  src.models.doctree  src.models.utilLoss.doctree  src.models.utilMetrics.doctree  src.models.utilModules.doctree  src.test.doctree  src.utils.doctree  src.utils.math.doctree  src.visualization.doctree
docs/_modules/: index.html
docs/_modules/src/: run.html  run_for_KGC.html
docs/_modules/src/data/: make_kgcdata.html  make_missing_kgcdata.html
docs/_modules/src/models/: pytorch_geometric.html
docs/_modules/src/models/KGModel/: conve.html  kg_model.html  kg_story_transformer.html  linear.html  translation.html
docs/_modules/src/models/datasets/: data_helper.html  datasets_for_story.html
docs/_modules/src/models/utilLoss/: focal_loss.html  utils.html
docs/_modules/src/models/utilMetrics/: ranking_metric.html
docs/_modules/src/models/utilModules/: mlp_mixer.html  tranformer.html
docs/_modules/src/test/: test_utils.html
docs/_modules/src/utils/: beautifulSoup.html  error.html  functions.html  gpu.html  hdf5.html  log_helper.html  numpy.html  progress_manager.html  result_helper.html  setup.html  str_process.html  textInOut.html  torch.html  torch_geometric.html  torch_ignite.html  typing.html  utils.html
docs/_modules/src/utils/math/: hyperbolic.html  hyperbolic_old.html
docs/_modules/src/visualization/: check_results.html
docs/_sources/: src.const.rst.txt  src.models.utilMetrics.rst.txt  src.models.utilModules.rst.txt  src.rst.txt  src.visualization.rst.txt
docs/_static/: documentation_options.js
notebooks/: 1206.ipynb  1222.ipynb  KGC_conve.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  check_answer.ipynb  make_09.ipynb  make_kgc_data.ipynb  make_missing_all_data.ipynb  nltk_check.ipynb  rdf_for_holmes01.ipynb  test02.ipynb  test03.ipynb  test04.ipynb  test05.ipynb  test06.ipynb  test07.ipynb  test08.ipynb  test09.ipynb  test10.ipynb  test11.ipynb  test123.ipynb  test230118.ipynb
notebooks/check_results/: 230205.ipynb  230205_5.ipynb  230205_7.ipynb  230207.ipynb  wn18rr.ipynb
notebooks/console/: console01.ipynb  console02.ipynb
notebooks/kgc03/: AbbeyGrange.ipynb  AbbeyGrange075.ipynb  ResidentPatient075.ipynb  SpeckledBand090.ipynb  all100.ipynb
notebooks/kgc03.0/: DevilsFoot075.ipynb  ResidentPatient090.ipynb  SilverBlaze075.ipynb  SilverBlaze090.ipynb  all100 copy.ipynb
notebooks/kgc03a/: all100.ipynb
notebooks/kgc03new/: AbbeyGrange075.ipynb  AbbeyGrange090.ipynb  DevilsFoot075.ipynb  DevilsFoot090.ipynb  ResidentPatient075.ipynb  ResidentPatient090.ipynb  SilverBlaze075.ipynb  SilverBlaze090.ipynb  SpeckledBand075.ipynb  SpeckledBand090.ipynb  all100.ipynb
notebooks/kgc03old/: 1222.ipynb  AbbeyGrange090.ipynb  DevilsFoot090.ipynb  SpeckledBand075.ipynb  all100 copy 2.ipynb  all100.ipynb
notebooks/test_or_example/: aaa.ipynb  if_training_model.ipynb
notebooks/word_net/wn18rr_make_data/: wn18rr.ipynb
runs/Nov14_01-30-16_RyoyaMacBookAir.local/: events.out.tfevents.1668357016.RyoyaMacBookAir.local.47490.0
runs/Nov14_01-30-59_RyoyaMacBookAir.local/: events.out.tfevents.1668357059.RyoyaMacBookAir.local.47648.0
runs/Nov14_01-31-25_RyoyaMacBookAir.local/: events.out.tfevents.1668357085.RyoyaMacBookAir.local.47755.0
runs/Nov14_01-33-44_RyoyaMacBookAir.local/: events.out.tfevents.1668357224.RyoyaMacBookAir.local.48088.0
runs/Nov15_20-11-28_RyoyaMacBookAir.local/: events.out.tfevents.1668510688.RyoyaMacBookAir.local.13592.1test
runs/Nov15_20-14-09_RyoyaMacBookAir.localtest model/: events.out.tfevents.1668510849.RyoyaMacBookAir.local.13650.1
sphinx_docs/: conf.py  index.rst  src.data.rst  src.features.rst  src.models.KGModel.rst  src.models.datasets.rst  src.models.rst  src.utils.math.rst  src.utils.rst
src/: convEmain.py  evaluation.py  model.py  run.py  run_for_KGC.py  run_for_KGC_compare_previous.py  run_for_WN18RR.py
src/const/: const_values.py
src/data/: get_data.py  holms_data.py  kgcdata.py  make_dataset.py  make_ids.py  make_kgcdata.py  make_missing_kgcdata.py  preprocess_data.py  rdf01.py  rdf03.py
src/models/: gcn.py  main.py  pytorch_geometric.py  run.py  train_model.py
src/models/KGModel/: ConvE.py  conve.py  kg_model.py  kg_sequence_transformer.py  kg_story_transformer.py  linear.py  model.py  transe.py  translation.py
src/models/datasets/: data_helper.py  data_helper_for_wn18rr.py  datasets.py  datasets_for_sequence.py  datasets_for_story.py  datasets_for_wn18rr.py
src/models/utilLoss/: focal_loss.py  utils.py
src/models/utilMetrics/: ranking_metric.py
src/models/utilModules/: mlp_mixer.py  tranformer.py
src/test/: test_model.py  test_utils.py
src/utils/: beautifulSoup.py  error.py  functions.py  gpu.py  hdf5.py  log_helper.py  numpy.py  progress_manager.py  result_helper.py  setup.py  str_process.py  textInOut.py  torch.py  torch_geometric.py  torch_ignite.py  typing.py  utils.py
src/utils/math/: hyperbolic.py  hyperbolic_old.py
src/visualization/: check_results.py  poincere01.py
