[tool.poetry]
name = "knowledge_graph"
version = "0.1.4"
description = "Knowledge Graph"
authors = ["RyoyaKanedaStudent <kaneda@ss.cs.osakafu-u.ac.jp>"]
packages = [
{include = "models", from = 'src' },
{include = "utils", from = 'src' }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = { version = "^0.19.1", source = "pypi" }
PyYAML = { version = "^5.3.1", source = "pypi" }
h5py = { version = "^3.7.0", source = "pypi" }
path = { version = "^16.4.0", source = "pypi" }
numpy = { version = "^1.23.4", source = "pypi" }
numba = { version = "^0.56.3", source = "pypi"}
spacy = { version = ">=2.1.0,<3.4", source = "pypi" }
scipy = { version = "^1.8.0", source = "pypi" }
pandas = { version = "^1.4.3", source = "pypi" }
sklearn = { version = "^0.0", source = "pypi" }
datasets = { version = "^1.6.0", source = "pypi" }
tensorboard = { version = "^2.5.0", source = "pypi" }
optuna = {version = "^3.0.3", source = "pypi"}
# natural langage tools
sentencepiece = { version = "^0.1.95", source = "pypi" }
pyknp = { version = "^0.4.6", source = "pypi" }
nltk = { version = "^3.7", source = "pypi" }
pytorch-ignite = { version = "^0.4.9", source = "pypi" }
transformers = { version = ">=4.1,<4.21", source = "pypi" }

torch = [
    { version = "^1.13.1", source = "pypi", extras = ["macos"], optional = true },
    { version = "^1.13.0", source = "pypi", extras = ["cuda120"], optional = true }
]
torchvision = [
    { version = "^0.14.0", source = "pypi", extras = ["macos"], optional = true },
    { version = "^0.14.0", source = "pypi", extras = ["cuda120"], optional = true }
] # allennlp
torchaudio = [
    { version = "^0.13.0", source = "pypi", extras = ["macos"], optional = true },
    { version = "^0.13.0", source = "pypi", extras = ["cuda120"], optional = true }
]
pyg-lib = { version = "^0.1.0+pt113cu117", source = "torch-geometric", extras = ["cuda120"], optional = true }
torch-scatter = [
    { version = "^2.0.9", source = "pypi", extras = ["macos"], optional = true },
    { version = "^2.1.0+pt113cu117", source = "torch-geometric", extras = ["cuda120"], optional = true }
]
torch-sparse = [
    { version = "^0.6.13", source = "pypi", extras = ["macos"], optional = true },
    { version = "^0.6.15+pt113cu117", source = "torch-geometric", extras = ["cuda120"], optional = true }
]
torch-cluster = [
    { version = "^1.6.0", source = "pypi", extras = ["macos"], optional = true },
    { version = "^1.6.0+pt113cu117", source = "torch-geometric", extras = ["cuda120"], optional = true }
]
torch-spline-conv = [
    { version = "^1.2.1", source = "pypi", extras = ["macos"], optional = true },
    { version = "^1.2.1+pt113cu117", source = "torch-geometric", extras = ["cuda120"], optional = true }
]
torch-geometric = [
    { version = "^2.0.4", source = "pypi", extras = ["macos"], optional = true },
    { version = "^2.2.0", source = "pypi", extras = ["cuda120"], optional = true }
]
# allennlp = { version = "^2.10.1", source = "pypi", extras = ["cuda120"], optional = true }

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
notebook = { version = "^6.5.1", source = "pypi" }
seaborn = { version = "^0.12.1", source = "pypi"}
jupyterlab = { version = "^3.0.16", source = "pypi" }
ipywidgets = { version = "^7.6.3", source = "pypi" }
widgetsnbextension = { version = "^3.5.1", source = "pypi" }
jupyter-contrib-nbextensions = { version = "*", source = "pypi" }
jupyter-nbextensions-configurator =  { version = "*", source = "pypi" }

[tool.poetry.group.dev.dependencies]
autopep8 = { version = "*", source = "pypi" }

[tool.poetry.group.test.dependencies]
pytest = { version = "*", source = "pypi" }

[[tool.poetry.source]]
name = "torch-geometric"
url = "https://data.pyg.org/whl/torch-1.13.0+cu117.html"
default = false
secondary = true

[tool.poetry.extras]
macos = ["torch", "torchvision", "torchaudio", "torch-scatter", "torch-sparse", "torch-cluster", "torch-spline-conv", "torch-geometric"]
cuda120 = ["torch", "torchvision", "torchaudio", "pyg-lib", "torch-scatter", "torch-sparse", "torch-cluster", "torch-spline-conv", "torch-geometric"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]