[tool.poetry]
name = "knowledge_graph"
version = "0.1.4"
description = "Knowledge Graph"
authors = ["RyoyaKanedaStudent <kaneda@ss.cs.osakafu-u.ac.jp>"]
packages = [
    {include = "models", from = 'src' },
    {include = "utils", from = 'src' }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = { version = "^0.19.1", source = "pypi" }
PyYAML = { version = "^5.3.1", source = "pypi" }
h5py = { version = "^3.7.0", source = "pypi" }
path = { version = "^16.4.0", source = "pypi" }
# machine learning tools
numpy = { version = "^1.23.4", source = "pypi" }
numba = { version = "^0.56.3", source = "pypi"}
spacy = { version = ">=2.1.0,<3.4", source = "pypi" }
scipy = { version = "^1.8.0", source = "pypi" }
pandas = { version = "^1.4.3", source = "pypi" }
sklearn = { version = "^0.0", source = "pypi" }
datasets = { version = "^1.6.0", source = "pypi" }
tensorboard = { version = "^2.5.0", source = "pypi" }
optuna = { version = "^3.0.3", source = "pypi"}
rdflib = { version ="^6.2.0", source = "pypi"}
# deep larning and natural langage processing tools.
sentencepiece = { version = "^0.1.95", source = "pypi" }
pyknp = { version = "^0.4.6", source = "pypi" }
nltk = { version = "^3.7", source = "pypi" }
pytorch-ignite = { version = "^0.4.9", source = "pypi" }
transformers = { version = ">=4.1,<4.21", source = "pypi" }
torch = { version = "^1.13.1", source = "pypi"}
torchvision = { version = "^0.14.0", source = "pypi" }
torchaudio = { version = "^0.13.0", source = "pypi" }
torch-scatter = [
    { version = "^2.1.0", source = "pypi", markers = "sys_platform == 'darwin'" },
    { version = "^2.1.0+pt113cu117", source = "torch-geometric", markers = "sys_platform == 'linux'" }
]
torch-sparse = [
    { version = "^0.6.15", source = "pypi", markers = "sys_platform == 'darwin'" },
    { version = "^0.6.15+pt113cu117", source = "torch-geometric", markers = "sys_platform == 'linux'" }
]
torch-cluster = [
    { version = "^1.6.0", source = "pypi", markers = "sys_platform == 'darwin'" },
    { version = "^1.6.0+pt113cu117", source = "torch-geometric", markers = "sys_platform == 'linux'" }
]
torch-spline-conv = [
    { version = "^1.2.1", source = "pypi", markers = "sys_platform == 'darwin'" },
    { version = "^1.2.1+pt113cu117", source = "torch-geometric", markers = "sys_platform == 'linux'" }
]
torch-geometric = { version = "^2.2.0", source = "pypi" }
attrdict = {version = "^2.0.1", source = "pypi"}
networkx = {version = "^3.0", source = "pypi"}

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyter = { version = "^1.0.0", source = "pypi" }
notebook = { version = "^6.5.2", source = "pypi" }
seaborn = { version = "^0.12.1", source = "pypi"}
jupyterlab = { version = "^3.0.16", source = "pypi" }
ipywidgets = { version = "^7.6.3", source = "pypi" }
widgetsnbextension = { version = "^3.5.1", source = "pypi" }
jupyter-contrib-nbextensions = { version = "*", source = "pypi" }
jupyter-nbextensions-configurator =  { version = "*", source = "pypi" }

[tool.poetry.group.dev.dependencies]
autopep8 = { version = "*", source = "pypi" }
black = { version = "*", source = "pypi" }
isort = { version = "*", source = "pypi" }
mypy = { version = "*", source = "pypi" }
Pylint = { version = "*", source = "pypi" }
sphinx = { version = "*", source = "pypi" }
sphinx-rtd-theme = { version = "*", source = "pypi" }

[tool.poetry.group.test.dependencies]
pytest = { version = "*", source = "pypi" }

[[tool.poetry.source]]
name = "torch-geometric"
url = "https://data.pyg.org/whl/torch-1.13.0+cu117.html"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]